<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="Typos">Surveyer</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="enthaltung">Enthaltung</string>
    <string name="daf_r">Dafür</string>
    <string name="dagegen">Dagegen</string>
    <string name="umfrage">Umfrage</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_logo">App Logo</string>
    <string name="socket_offline_message">Socket Offline</string>
    <string name="socket_connection_error_message">Socket Online</string>
    <string name="anonym">Anonym</string>
    <string name="noch_keinen_account">Noch keinen Account?</string>
    <string name="registrieren">Registrieren</string>
    <string name="passwort_speichern">Passwort speichern</string>
    <string name="login">Login</string>
    <string name="geben_sie_ihr_passwort_ein">Geben Sie ihr Passwort ein</string>
    <string name="passwort">Passwort</string>
    <string name="geben_sie_ihren_nutzernamen_an">Geben sie Ihren Nutzernamen an</string>
    <string name="benutzername">Benutzername</string>
    <string name="header">HEADER</string>
    <string name="email">Email</string>
    <string name="geben_sie_ihre_email_addresse_an">Geben Sie Ihre Email-Addresse an</string>
    <string-array name="survey_type">
        <item>Ja/Nein</item>
        <item>Ja/Nein/Enthaltung</item>
        <item>Dafür/Dagegen</item>
        <item>Dafür/Dagegen/Enthaltung</item>
        <item>Eigenes</item>
    </string-array>
</resources>